[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
bitcoin = "0.31.2"
bitcoincore-rpc = "0.18.0"
clap = { version = "4.5.1", features = ["derive"] }
crossbeam-channel = "0.5.12"
env_logger = "0.11.2"
ethabi = "18.0.0"
ethers = { version = "2.0.13", features = ["abigen","legacy"] }
log = "0.4.20"
num_cpus = "1.16.0"
reqwest = { version = "0.12.0", features = ["json"] }
rustc-hex = "2.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["bigdecimal","runtime-tokio", "postgres", "chrono", "json"]}
tokio = { version = "1.36.0", features = ["full"]}
url = "2.5.0"
